--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>11.0.0-M16</version>
+        </dependency>
+
     </dependencies>
 
 
