--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,17 +4,18 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
          http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
     <welcome-file-list>
-        <welcome-file>HelloIndex.html</welcome-file>
+        <welcome-file>index.html</welcome-file>
         <welcome-file>default.html</welcome-file>
     </welcome-file-list>
 
-    <servlet>
-        <servlet-name>Servlet12</servlet-name>
-        <servlet-class>main/webServlet12.java</servlet-class>
-    </servlet>
-    
+   <servlet>
+       <servlet-name>Servlet12</servlet-name>
+       <servlet-class>main.web.Servlet12</servlet-class>
+   </servlet>
+
     <servlet-mapping>
         <servlet-name>Servlet12</servlet-name>
         <url-pattern>/servlet12</url-pattern>
     </servlet-mapping>
+
 </web-app>
